# wordle-rust

./: .gitignore  Cargo.toml  README.md  index.html
src/: game.rs  lib.rs  main.rs
