[package]
name = "rust_wordle"
version = "0.1.0"
authors = ["Jesper Bisgaard <jesperjb@gmail.com>"]
description = "Wordle for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/jespermb/wordle-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
colored = "2.0.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
